# melon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/melon-auth/: Cargo.toml
crates/melon-auth/src/: config.rs  error.rs  http.rs  integration_tests.rs  keystore.rs  lib.rs  relay_driver.rs  session.rs
crates/melon-core/: Cargo.toml
crates/melon-core/src/: account.rs  expiry.rs  idi.rs  idm.rs  ledger.rs  lib.rs  money.rs  payment.rs
crates/melon-db/: Cargo.toml
crates/melon-db/migrations/: 0001_init.sql  0002_merchant_api_keys.sql  0003_transaction_note.sql  0004_merchant_adjustments.sql  0005_payment_fees.sql  0006_merchant_credit_limit.sql  0007_issuer_ledger.sql  0008_merchant_account_aliases.sql  0009_users.sql  0010_account_idm.sql  0011_stores.sql  0012_bucket_day_expiry.sql
crates/melon-db/src/: lib.rs  ops.rs  users.rs
crates/melon-db/tests/: money.rs
crates/melon-server/: Cargo.toml
crates/melon-server/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs
crates/melon-server/static/: admin.html  merchant.html
crates/melon-server/tests/: e2e.rs
crates/melon-terminal/: Cargo.toml
crates/melon-terminal/src/: lib.rs  main.rs  serve.rs
crates/melon-terminal/static/: terminal.html
deploy/: Caddyfile  compose.yaml  env.example  init-secrets.sh
docs/: README.md  api.md  architecture.md  domain.md  operations.md
web/: .dockerignore  .env.local.example  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/(en)/: layout.tsx
web/app/(en)/en/: opengraph-image.tsx  page.tsx
web/app/(ja)/: layout.tsx  page.tsx
web/app/(ja)/admin/: layout.tsx  page.tsx
web/app/(ja)/merchant/: layout.tsx
web/app/(ja)/merchant-guide/: opengraph-image.tsx  page.tsx
web/app/(ja)/merchant-terms/: page.tsx
web/app/(ja)/merchant/stores/: page.tsx
web/app/(ja)/merchant/users/: page.tsx
web/app/(ja)/terms/: page.tsx
web/app/admin/: layout.tsx  page.tsx
web/app/admin/accounts/: page.tsx
web/app/admin/issuer/: page.tsx
web/app/admin/merchants/: page.tsx
web/app/admin/report/: page.tsx
web/app/admin/transactions/: page.tsx
web/app/admin/users/: page.tsx
web/app/merchant/: layout.tsx  page.tsx
web/app/merchant-terms/: opengraph-image.tsx  page.tsx
web/app/merchant/transactions/: page.tsx
web/app/merchant/users/: page.tsx
web/app/terms/: opengraph-image.tsx  page.tsx
web/assets/: OFL.txt  README.md
web/components/: doc.tsx  landing.tsx  portal.tsx  toast.tsx  ui.tsx
web/content/: merchant-guide.md  merchant-terms.md  terms.md
web/lib/: api.ts  docs.ts  format.ts  lp-copy.tsx  og.tsx  site.ts  types.ts
