[package]
name = "melon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Melon HTTP server: online FeliCa mutual authentication + prepaid payment API over PostgreSQL."

[lib]
name = "melon_server"
path = "src/lib.rs"

[[bin]]
name = "melon-server"
path = "src/main.rs"

[dependencies]
melon-core.workspace = true
melon-db.workspace = true
melon-auth.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
uuid.workspace = true
hex.workspace = true
sha2.workspace = true
rand.workspace = true
argon2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
felica-rs.workspace = true
melon-db.workspace = true
sqlx.workspace = true
melon-auth.workspace = true
melon-core.workspace = true
axum.workspace = true
tower.workspace = true
serde_json.workspace = true
http-body-util = "0.1"
